--- a/client/package.json
+++ b/client/package.json
@@ -2,16 +2,21 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "9.8.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve --open",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.0.0-beta.44",
     "axios": "^0.18.0",
     "bulma": "^0.6.2",
+    "express": "^4.16.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
     "vue-class-component": "^6.0.0",
