--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "9.8.0"
+    "node": "9.8.0",
+    "npm": "5.6.0"
   },
   "scripts": {
     "serve": "vue-cli-service serve --open",
