--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yawenina.github.io/words/",
   "engines": {
     "node": "9.8.0",
     "npm": "5.6.0"
@@ -14,7 +15,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@babel/plugin-proposal-decorators": "^7.0.0-beta.44",
+    "@babel/plugin-proposal-decorators": "^7.0.0-beta.46",
     "axios": "^0.18.0",
     "bulma": "^0.6.2",
     "express": "^4.16.3",
